ocsp + critical reenroll fix

--- a/.github/workflows/dms-manager-develop.yaml
+++ b/.github/workflows/dms-manager-develop.yaml
@@ -5,13 +5,14 @@ on:
     branches:
       - develop
     paths:
-        - 'pkg/dms-enroller/**'
-        - 'main/dms-enroller/**'
+        - '.github/workflows/dms-manager*'
+        - 'pkg/dms-manager/**'
+        - 'main/dms-manager/**'
   workflow_call:
 
 jobs:
-  lamassu_dms_enroller_unit_testing:
-    name: DMS Enroller Unit Testing
+  lamassu_dms_manager_unit_testing:
+    name: DMS Manager Unit Testing
     # runs-on: self-hosted
     runs-on: ubuntu-latest
     steps:
@@ -23,7 +24,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.18 
+          go-version: 1.19
       
       - name: Set up gotestfmt
         run: go install github.com/haveyoudebuggedit/gotestfmt/v2/cmd/gotestfmt@v2.3.1
@@ -31,4 +32,4 @@ jobs:
       - name: Run Go Unit Tests
         run: |
           set -eo pipefail
-          go test -json -v ./pkg/dms-enroller/server/api/transport/ | gotestfmt
+          go test -json -v ./pkg/dms-manager/server/api/ | gotestfmt
