--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -263,44 +263,8 @@ jobs:
         key: ${{ secrets.AWS_SSH_KEY }}
         port: ${{ secrets.AWS_SSH_PORT }}
         script: |
-          git clone https://github.com/vegasbrianc/prometheus.git
-          docker swarm init
-          cd prometheus
-          HOSTNAME=$(hostname) docker stack deploy -c docker-stack.yml prom
-          cd ..
-          
-          git clone https://github.com/lamassuiot/lamassuiot -b release
-          git clone https://github.com/lamassuiot/lamassu-compose -b develop && cd lamassu-compose
-
-          export DB_USER=admin
-          export DB_PASSWORD=admin
-          export DOMAIN=dev.lamassu.io
-
-          export LAMASSU_GATEWAY_DOCKER_IMAGE=lamassuiot/lamassu-gateway:latest
-          export LAMASSU_UI_DOCKER_IMAGE=lamassuiot/lamassu-ui:latest
-          export LAMASSU_DB_DOCKER_IMAGE=lamassuiot/lamassu-db:latest
-          export LAMASSU_AUTH_DOCKER_IMAGE=lamassuiot/lamassu-auth:latest
-          export LAMASSU_CA_DOCKER_IMAGE=lamassuiot/lamassu-ca-dev:latest
-          export LAMASSU_DMS_MANAGER_DOCKER_IMAGE=lamassuiot/lamassu-dms-manager-dev:latest
-          export LAMASSU_DEVICE_MANAGER_DOCKER_IMAGE=lamassuiot/lamassu-device-manager-dev:latest
-          export LAMASSU_RABBITMQ_DOCKER_IMAGE=lamassuiot/lamassu-rabbitmq:latest
-          export LAMASSU_CLOUD_PROXY_DOCKER_IMAGE=lamassuiot/lamassu-cloud-proxy-dev:latest
-          export LAMASSU_OCSP_DOCKER_IMAGE=lamassuiot/lamassu-ocsp-dev:latest
-
-          mv .env .env.tmp 
-          cat .env.tmp | envsubst > .env
-
-          sudo tee -a /etc/hosts > /dev/null <<EOT
-          127.0.0.1  ${DOMAIN}
-          127.0.0.1  vault.${DOMAIN}
-          127.0.0.1  auth.${DOMAIN}
-          127.0.0.1  tracing.${DOMAIN}
-          127.0.0.1  consul.${DOMAIN}
-          EOT
-
-          sed -i 's/30/'300000'/g' .env
-          
-          bash install.sh
+          curl -fsSL https://raw.githubusercontent.com/lamassuiot/lamassu-compose/release/lamassu-compose.sh -o lamassu-compose.sh
+          sudo bash lamassu-compose.sh --domain dev.lamassu.io --compose-version develop
 
   integration_test:
     name: Integration test
