--- a/.github/workflows/device-manager-develop.yaml
+++ b/.github/workflows/device-manager-develop.yaml
@@ -7,6 +7,7 @@ on:
     paths:
         - '.github/workflows/device-manager*'
         - 'pkg/device-manager/**'
+        - 'pkg/utils/**'
         - 'main/device-manager/**'
   workflow_call:
 
