--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,11 +27,12 @@ jobs:
       # runs-on: self-hosted
       runs-on: ubuntu-latest
       steps:        
-      - name: Login to DockerHub
+      - name: Login to Github Registry
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       
       - name: Build CA DEV docker image
         uses: docker/build-push-action@v2
@@ -40,13 +41,13 @@ jobs:
           build-args: |
             BASE_IMAGE=alpine:3.14
           tags: |
-            lamassuiot/lamassu-ca-dev:${{ github.sha }}
-            lamassuiot/lamassu-ca-dev:latest
+            ghcr.io/lamassuiot/lamassu-ca-dev:${{ github.sha }}
+            ghcr.io/lamassuiot/lamassu-ca-dev:latest
           push: true
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
-          image-ref: lamassuiot/lamassu-ca-dev:${{ github.sha }}
+          image-ref: ghcr.io/lamassuiot/lamassu-ca-dev:${{ github.sha }}
           format: 'sarif'
           output: 'trivy-results.sarif'
 
@@ -64,11 +65,12 @@ jobs:
       # runs-on: self-hosted
       runs-on: ubuntu-latest
       steps:
-      - name: Login to DockerHub
+      - name: Login to Github Registry
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Device Manager DEV docker image
         uses: docker/build-push-action@v2
@@ -77,8 +79,8 @@ jobs:
           build-args: |
             BASE_IMAGE=alpine:3.14
           tags: |
-            lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
-            lamassuiot/lamassu-device-manager-dev:latest
+            ghcr.io/lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
+            ghcr.io/lamassuiot/lamassu-device-manager-dev:latest
           push: true
 
   build_dms_manager_dev_docker_image:
@@ -90,11 +92,12 @@ jobs:
       # runs-on: self-hosted
       runs-on: ubuntu-latest
       steps:
-      - name: Login to DockerHub
+      - name: Login to Github Registry
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build DMS Managwer DEV docker image
         uses: docker/build-push-action@v2
@@ -103,8 +106,8 @@ jobs:
           build-args: |
             BASE_IMAGE=alpine:3.14
           tags: |
-            lamassuiot/lamassu-dms-manager-dev:${{ github.sha }}
-            lamassuiot/lamassu-dms-manager-dev:latest
+            ghcr.io/lamassuiot/lamassu-dms-manager-dev:${{ github.sha }}
+            ghcr.io/lamassuiot/lamassu-dms-manager-dev:latest
           push: true
 
   build_ocsp_dev_docker_image:
@@ -116,11 +119,12 @@ jobs:
       # runs-on: self-hosted
       runs-on: ubuntu-latest
       steps:
-      - name: Login to DockerHub
+      - name: Login to Github Registry
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build OCSP DEV docker image
         uses: docker/build-push-action@v2
@@ -129,8 +133,8 @@ jobs:
           build-args: |
             BASE_IMAGE=alpine:3.14
           tags: |
-            lamassuiot/lamassu-ocsp-dev:${{ github.sha }}
-            lamassuiot/lamassu-ocsp-dev:latest
+            ghcr.io/lamassuiot/lamassu-ocsp-dev:${{ github.sha }}
+            ghcr.io/lamassuiot/lamassu-ocsp-dev:latest
           push: true
 
   build_cloud_proxy_dev_docker_image:
@@ -142,11 +146,12 @@ jobs:
       # runs-on: self-hosted
       runs-on: ubuntu-latest
       steps:
-      - name: Login to DockerHub
+      - name: Login to Github Registry
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Cloud Proxy DEV docker image
         uses: docker/build-push-action@v2
@@ -155,8 +160,8 @@ jobs:
           build-args: |
             BASE_IMAGE=alpine:3.14
           tags: |
-            lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
-            lamassuiot/lamassu-cloud-proxy-dev:latest
+            ghcr.io/lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
+            ghcr.io/lamassuiot/lamassu-cloud-proxy-dev:latest
           push: true
 
   build_alerts_dev_docker_image:
@@ -168,11 +173,12 @@ jobs:
       # runs-on: self-hosted
       runs-on: ubuntu-latest
       steps:
-      - name: Login to DockerHub
+      - name: Login to Github Registry
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build Cloud Proxy DEV docker image
         uses: docker/build-push-action@v2
@@ -181,8 +187,8 @@ jobs:
           build-args: |
             BASE_IMAGE=alpine:3.14
           tags: |
-            lamassuiot/lamassu-alerts-dev:${{ github.sha }}
-            lamassuiot/lamassu-alerts-dev:latest
+            ghcr.io/lamassuiot/lamassu-alerts-dev:${{ github.sha }}
+            ghcr.io/lamassuiot/lamassu-alerts-dev:latest
           push: true
 
   build_lamassu_db_dev_docker_image:
@@ -194,19 +200,20 @@ jobs:
       # runs-on: self-hosted
       runs-on: ubuntu-latest
       steps:
-      - name: Login to DockerHub
+      - name: Login to Github Registry
         uses: docker/login-action@v1 
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build DB DEV docker image
         uses: docker/build-push-action@v2
         with:
           file: ci/database.dockerfile 
           tags: |
-            lamassuiot/lamassu-db-dev:${{ github.sha }}
-            lamassuiot/lamassu-db-dev:latest
+            ghcr.io/lamassuiot/lamassu-db-dev:${{ github.sha }}
+            ghcr.io/lamassuiot/lamassu-db-dev:latest
           push: true
 
   create_dev_server_env:
