--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,32 +1,18 @@
-name: Master Workflow
+name: Docker Releaser Workflow
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+    inputs:
+      release_version:
+        type: string
+        description: release version when building docker containers (example; 2.0.0)
 
 jobs:
-  tag_generator:
-    name: Tag Generator
-    runs-on: ubuntu-latest
-    outputs:
-      new-tag: ${{ steps.tag_version.outputs.new_tag }}
-      new-version: ${{ steps.tag_version.outputs.new_version }}
-    steps:   
-      - name: Automatic Tag (Bump version and push tag)
-        id: tag_version
-        uses: mathieudutour/github-tag-action@v6.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          release_branches : "main"
-
   build_dev_docker_image:
     strategy:
       matrix:
         service: [ca, device-manager, dms-manager, ocsp, alerts, cloud-proxy, db]
     name: ${{ matrix.service }} - Release docker images
-    needs:
-      - tag_generator
     runs-on: ubuntu-latest
     steps:
       - name: Login to Github Registry
@@ -43,6 +29,6 @@ jobs:
           build-args: |
             BASE_IMAGE=alpine:3.14
           tags: |
-            ghcr.io/lamassuiot/lamassu-${{ matrix.service }}:${{ needs.tag_generator.outputs.new-version }}
+            ghcr.io/lamassuiot/lamassu-${{ matrix.service }}:${{ github.event.inputs.release_version }}
             ghcr.io/lamassuiot/lamassu-${{ matrix.service }}:latest
           push: true
