--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,7 +11,7 @@ jobs:
   build_dev_docker_image:
     strategy:
       matrix:
-        service: [ca, devmanager, dmsmanager, va, alerts, cloud-proxy]
+        service: [ca, devmanager, dmsmanager, va, alerts, aws-connector]
     name: ${{ matrix.service }} - Release docker images
     runs-on: ubuntu-latest
     steps:
