hotfix: fixing if structure in github action
Signed-off-by: Saiz Haritz <hsaizsierra@gmail.com>

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
           # regex obtained from: https://semver.org/#is-there-a-suggested-regular-expression-regex-to-check-a-semver-string
           if [[ ${{ github.event.inputs.release_version }} =~ ^(0|[1-9]\d*)\.(0|[1-9]\d*)\.(0|[1-9]\d*)(?:-((?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*)(?:\.(?:0|[1-9]\d*|\d*[a-zA-Z-][0-9a-zA-Z-]*))*))?(?:\+([0-9a-zA-Z-]+(?:\.[0-9a-zA-Z-]+)*))?$ ]]; then
               echo "match=true" >> $GITHUB_OUTPUT
-          elif
+          else
               echo "Aborting action, invalid version input. Got: ${{ github.event.inputs.release_version }}"
               exit 1
           fi
