Reduce log level, skip unreliable tests and manage ignored errors in tests
Signed-off-by: Juan Jose Rodriguez <jjrodriguez@lksnext.com>

--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -22,4 +22,4 @@ jobs:
 
       - name: Run Tests
         run: |
-          go run gotest.tools/gotestsum@latest --format github-actions ./pkg/assemblers -timeout 300s
+          go run gotest.tools/gotestsum@latest --format github-actions ./pkg/assemblers -timeout 600s -coverprofile coverage.out
