Add test for messaging utils and disable unreliable test
Signed-off-by: Juan Jose Rodriguez <jjrodriguez@lksnext.com>

--- a/.github/workflows/ci-test.yaml
+++ b/.github/workflows/ci-test.yaml
@@ -24,4 +24,4 @@ jobs:
 
       - name: Run Tests
         run: |
-          go run gotest.tools/gotestsum@latest --format github-actions ./pkg/assemblers ./pkg/helpers/... -timeout 600s -coverprofile coverage.out
+          go run gotest.tools/gotestsum@latest --format github-actions ./pkg/... -timeout 600s -coverprofile coverage.out
